# rust-c2

./: Cargo.toml  README.md  TODO.md  roadmap.md
agent/: Cargo.toml
agent/src/: main.rs  tcp.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  messages.md
common/src/: lib.rs
operator/: Cargo.toml
operator/src/: main.rs
server/: Cargo.toml
server/src/: agent.rs  listener.rs  main.rs  old_main.rs  operator.rs
server/src/old/: client.rs  listener.rs
