[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shell-words = "1.1.0"
rand = "0.9.1"
hex = "0.4.3"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"

